# PtpUploader

./: .dir-locals.el  .gitignore  .pylintrc  CHANGELOG.md  CREDITS  Dockerfile  INSTALL  INSTALL.md  PtpUploaderTorrentSender.js  PtpUploaderTorrentSender.user.js  README  README.md  TODO  docker-bake.hcl  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-2.yml  build.yml  docker.yml  labels.yml  test.yml
src/: manage.py
src/FlexGet/: config.example.yml
src/PtpUploader/: AnnouncementDirectoryWatcher.py  AnnouncementWatcher.py  Database.py  Gft.py  Globals.py  Helper.py  IdxReader.py  ImageUploader.py  IncludedFileList.py  Logger.py  Main.py  MainWeb.py  MakeTorrent.py  Manage.py  MediaInfo.py  MyGlobals.py  NfoParser.py  Notifier.example.ini  Notifier.py  Ptp.py  PtpImdbInfo.py  PtpMovieSearchResult.py  PtpSubtitle.py  PtpUploadInfo.py  PtpUploader.py  PtpUploaderException.py  PtpUploaderMessage.py  PtpUploaderRunner.py  ReleaseDescriptionFormatter.py  ReleaseExtractor.py  ReleaseFilter.py  ReleaseInfo.py  ReleaseInfoMaker.py  ReleaseNameParser.py  Rtorrent.py  SceneGroups.txt  SceneRelease.py  ScreenshotList.py  ScreenshotMaker.py  Settings.example.ini  (+10 more)
src/PtpUploader/ImageHost/: Base.py  Catbox.py  ImageUploader.py  ImgBB.py  Imges.py  Picload.py  PtpImg.py  WhatImg.py  __init__.py
src/PtpUploader/InformationSource/: Imdb.py  MoviePoster.py  __init__.py
src/PtpUploader/Job/: CheckAnnouncement.py  Delete.py  Download.py  FinishedJobPhase.py  JobManager.py  JobRunningState.py  JobStartMode.py  LoadFile.py  Supervisor.py  Upload.py  WorkerBase.py  WorkerThread.py
src/PtpUploader/Source/: AlphaRatio.py  Cinemageddon.py  Cinematik.py  DigitalHive.py  File.py  FunFile.py  Gft.py  HDBits.py  HDTorrents.py  Karagarga.py  Manual.py  Prowlarr.py  RevolutionTT.py  SceneAccess.py  SourceBase.py  SourceFactory.py  TheDarkSyndicate.py  Torrent.py  TorrentBytes.py  TorrentLeech.py  TorrentShack.py
src/PtpUploader/Tool/: BdInfo.py  Ffmpeg.py  ImageMagick.py  LibMpv.py  MakeTorrent.py  MediaInfo.py  Mktor.py  Mplayer.py  Mpv.py  Oxipng.py  PyrocoreBencode.py  Rtorrent.py  ScreenshotMaker.py  SevenZip.py  Transmission.py  Unrar.py
src/PtpUploader/WebServer/: Authentication.py  DeleteJob.py  EditJob.py  ExternalCreateJob.py  JobCommon.py  Jobs.py  MovieAvailabilityCheck.py  MyFlask.py  MyWebServer.py  Pagination.py  ServerMain.py  Upload.py  UploadFile.py  WebServer.py  __init__.py
src/PtpUploader/WebServer/static/: style.css
src/PtpUploader/WebServer/templates/: checkifexists.html  edit_job.html  index.html  job_common.html  job_common_javascript.html  jobs.html  layout.html  movieAvailabilityCheck.html  upload.html
src/PtpUploader/db/migrations/: 0001_initial.py  0002_alter_releaseinfo_id.py  0003_auto_20211023_1828.py
src/PtpUploader/web/: forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
src/PtpUploader/web/migrations/: 0001_initial.py  0002_auto_20211025_0320.py  0003_alter_releaseinfo_jobrunningstate.py  0004_auto_20211028_2254.py  0005_auto_20211029_0135.py  0006_auto_20211029_2024.py  0007_alter_releaseinfo_trumpable.py  0008_alter_releaseinfo_subtitles.py  0009_alter_releaseinfo_trumpable.py  0010_alter_releaseinfo_screenshots.py  0011_alter_releaseinfo_screenshots.py  0012_alter_releaseinfo_screenshots.py  0013_auto_20211104_0344.py  0014_rename_scheduletimeutc_releaseinfo_scheduletime.py  (+3 more)
src/autodl-irssi/: autodl.example.cfg
src/pyWHATauto/: PtpUploaderIrcBot.py  WHATauto.py  changelog.txt  db.py  web.py
src/pyWHATauto/config_example/: credentials.conf  custom.conf  filters.conf  regex.conf  reports.conf  setup.conf
src/pyWHATauto/cookies/: bitmetv.cookie  iptorrents.cookie  sceneaccess.cookie  torrentleech.cookie
(+23 files in other folders)
