[tool.poetry]
name = "PtpUploader"
version = "0.10.2"
description = "A small uploader for a mildly popular movie site"
authors = ["kannibalox <kannibalox@gmail.com>"]
packages = [
  { include = "PtpUploader", from = "src" }
]
repository = "https://github.com/kannibalox/PtpUploader"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Web Environment",
        "Natural Language :: English",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = ">3.7.2,<4.0"
requests = "^2.26.0"
Django = "^3.2.8"
guessit = "^3.3.1"
pyrosimple = "^1.1.0"
dynaconf = "^3.1.7"
Unidecode = "^1.3.2"
Werkzeug = "^2.0.2"
cinemagoer = "^2022.1.26"
rarfile = "^4.0"

[tool.poetry.scripts]
PtpUploader = "PtpUploader.manage:run"
ReleaseInfoMaker = "PtpUploader.ReleaseInfoMaker:run"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"
mypy = "^0.991"

[tool.pylint]
[tool.pylint.'MESSAGES CONTROL']
disable="locally-disabled, superfluous-parens, no-else-return, too-many-arguments,logging-not-lazy, logging-format-interpolation, too-few-public-methods, protected-access, duplicate-code, consider-using-f-string, fixme, invalid-name, line-too-long, design, missing-module-docstring, missing-class-docstring, missing-function-docstring"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true

[tool.black]
#include = '\.py$'
extend-include = "migrations"

[tool.mypy]
[[tool.mypy.overrides]]
module = ['django.*']
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
